# pkg/model/trader.go
@@ -28,7 +28,7 @@ type ItemQuery struct {
 type Order struct {
 	ID        int64           `json:"id"  gorm:"column:id"`
 	ItemID    int64           `json:"item_id"  gorm:"column:item_id"`
-	CreatedID int64           `json:"created_id"  gorm:"column:created_id"`
+	CreatorID int64           `json:"creator_id"  gorm:"column:creator_id"`
 	OrderType OrderType       `json:"order_type"  gorm:"column:order_type"`
 	Price     decimal.Decimal `json:"price"  gorm:"column:price"`
 	Status    OrderStatus     `json:"status"  gorm:"column:status"`
@@ -52,8 +52,8 @@ type OrderUpdates struct {
 // Transaction is the result of orders matching
 type Transaction struct {
 	ID          int64           `json:"id"  gorm:"column:id"`
-	BuyOrderID  int64           `json:"buy_order_id"  gorm:"column:buy_order_id"`
-	SellOrderID int64           `json:"sell_order_id"  gorm:"column:sell_order_id"`
+	MakeOrderID int64           `json:"make_order_id"  gorm:"column:make_order_id"`
+	TakeOrderID int64           `json:"take_order_id"  gorm:"column:take_order_id"`
 	FinalPrice  decimal.Decimal `json:"final_price"  gorm:"column:final_price"`
 	UpdatedAt   time.Time       `json:"updated_at"  gorm:"column:updated_at"`
 	CreatedAt   time.Time       `json:"created_at"  gorm:"column:created_at"`
